Fixed Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 body {
     background-color: var(--color-yellow);
-    padding: 5rem;
+    padding: 1rem;
     font-size: 1rem;
     font-family: "Figtree", sans-serif;
 }
